objects/Veda_Data_Block__c.object
<CustomObject>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda Data Blocks</relationshipLabel>
        <relationshipName>Veda_Data_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Data Block</label>
    <nameField>
        <label>Data Block Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Data Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>